# simdwrap

./: .gitignore  CMakeLists.txt  README.md
include/: simdwrap.h
src/: simdwrap.c  simdwrap_scalar.c
